--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     <span pr-1>Made by</span>
     <a
       b-slate-link
-      href="https://github.com/derderjay/GPT2-" target="_blank"
+      href="https://u.wechat.com/EKQwadmNxtrc3su_1DXd3B8" target="_blank"
     >
       Viego
     </a>
