--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,5 +12,5 @@ import Themetoggle from './Themetoggle.astro'
     <span class="gpt-title">JieJie</span>
     <span class="gpt-subtitle">Pro</span>
   </div>
-  <p mt-1 op-60>powered by ChatGPT3.5</p>
+  <p mt-1 op-60>如果，你们能够正确的使用我，那么，我觉得这件事情，泰裤辣！</p>
 </header>
