--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     <span pr-1>Made by</span>
     <a
       b-slate-link
-      href="https://imgloc.com/i/iSIJMH"_blank"
+      href="https://i.328888.xyz/2023/04/23/iSIJMH.th.jpeg"_blank"
     >
       Viego
     </a>
