--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@
     <span px-1>|</span>
     <a
       b-slate-link
-      href="https://github.com/derderjay/GPT2-" target="_blank"
+      href="https://t.me/+z0e2tDwRxg05NjE1"_blank"
     >
       Source Code 
     </a>
