--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@
       b-slate-link
       href="https://t.me/+z0e2tDwRxg05NjE1"_blank"
     >
-      Source Code 
+      Telegram 
     </a>
   </p>
 </footer>
