--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
       b-slate-link
       href="https://i.328888.xyz/2023/04/23/iSIJMH.th.jpeg"_blank"
     >
-      Viego
+      Viego（Wechat:zj1152185223）
     </a>
     <span px-1>|</span>
     <a
